# tritium-sc

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pytest.ini  requirements.txt  run.py  run_scenarios.py  setup.sh  start.sh  sync-cameras.sh  test.sh
amy/: __init__.py  agent.py  announcer.py  commander.py  escalation.py  event_bus.py  extraction.py  geo.py  listener.py  lua_motor.py  memory.py  motor.py  mqtt_bridge.py  perception.py  router.py  sensorium.py  speaker.py  target_tracker.py  thinking.py  tools.py  transcript.py  vision.py
app/: __init__.py  config.py  database.py  main.py  models.py
comms/: event_bus.py  mqtt_bridge.py
docs/: ARCHITECTURE.md  AUDIT-GAPS.md  CHANGELOG.md  CONTROLS.md  COORDINATE-SYSTEM.md  DEEP-AUDIT-4-FINDINGS.md  DEMO-SPEC.md  ESCALATION.md  FLEET-BACKSTORY-SPEC.md  GAMEPAD.md  GRAND-PLAN.md  HOW-TO-PLAY.md  INFRASTRUCTURE.md  ITERATE-PROMPT.md  LANDSCAPE-SURVEY.md  MESHTASTIC.md  MISSION-TYPES-SPEC.md  MODEL-ROUTING.md  MQTT.md  NPC-INTELLIGENCE.md  PLAN.md  PLUGIN-SPEC.md  README.md  SIMULATION-ARCHITECTURE.md  SIMULATION.md  TAK.md  TERRAIN-PLAN.md  (+11 more)
examples/ros2-robot/: README.md  package.xml  setup.cfg  setup.py
examples/ros2-robot/config/: robot_params.yaml
examples/ros2-robot/launch/: robot.launch.py
examples/ros2-robot/ros2_robot/: camera_node.py  mqtt_bridge_node.py  nav2_client.py  simulated_odom.py  telemetry_node.py
examples/ros2-robot/tests/: test_camera_node.py  test_mqtt_bridge.py  test_nav2_client.py  test_telemetry.py
(+1298 files in other folders)
